Bugfix:Items overlap each other on mobile

--- a/src/styles/products/Item.sass
+++ b/src/styles/products/Item.sass
@@ -11,6 +11,7 @@
     box-sizing: border-box
     width: 100%
     padding: 0px
+    margin: 10% 0px
     img
         width: 100%
         margin-top: -15%
